center loss version

--- a/MNIST/test.ipynb
+++ b/MNIST/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,15 +62,27 @@
     "        selected_x2 = tf.multiply(selected_x, selected_x)\n",
     "        selected_y2 = tf.multiply(selected_y, selected_y)\n",
     "        selected_xy = tf.multiply(selected_x, selected_y)\n",
-    "        distance_category = tf.subtract(tf.add(selected_x2, selected_y2), 2*selected_xy)\n",
-    "        distance_category = tf.reduce_sum(distance_category)\n",
-    "        loss_tensor = tf.add(loss_tensor, distance_category)\n",
+    "        distance_category = tf.abs(tf.subtract(tf.add(selected_x2, selected_y2), 2*selected_xy))\n",
+    "        distance_category = tf.abs(tf.reduce_sum(0.5 * distance_category))\n",
+    "        loss_tensor = tf.abs(tf.add(loss_tensor, distance_category))\n",
     "    return loss_tensor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validation_l2loss(x_tensor, label_tensor, centers_tensor):\n",
+    "    centers_tensor_batch = tf.gather(centers_tensor, label_tensor)\n",
+    "    loss = tf.nn.l2_loss(x_tensor - centers_tensor_batch)\n",
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -79,12 +91,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "531.0\n531.0\n"
+      "730.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "365.0 365.0\n"
      ]
     }
    ],
    "source": [
-    "label_tensor = tf.placeholder(dtype=tf.float32, shape=[batch_size], name='input_y')\n",
+    "label_tensor = tf.placeholder(dtype=tf.int32, shape=[batch_size], name='input_y')\n",
     "x_tensor = tf.placeholder(dtype=tf.float32, shape=[batch_size, dim], name='input_x')\n",
     "centers_tensor = tf.placeholder(dtype=tf.float32, shape=[category_num, dim])\n",
     "centers_values = np.random.randint(1, 10, [category_num, dim])\n",
@@ -92,15 +111,16 @@
     "label_values = np.random.randint(1, 10, [20]).squeeze()\n",
     "print validation(x_values, centers_values, label_values, category_num=category_num)\n",
     "loss_tensor = calculate_centerloss(x_tensor, label_tensor, centers_tensor, category_num=category_num)\n",
+    "l2_loss_tensor = validation_l2loss(x_tensor, label_tensor, centers_tensor)\n",
     "with tf.Session() as sess:\n",
     "    init_op = tf.global_variables_initializer()\n",
     "    sess.run(init_op)\n",
-    "    loss_value = sess.run(loss_tensor, feed_dict={\n",
+    "    loss_value, l2_loss_value = sess.run([loss_tensor, l2_loss_tensor], feed_dict={\n",
     "        label_tensor: label_values,\n",
     "        x_tensor: x_values,\n",
-    "        centers_tensor:centers_values\n",
+    "        centers_tensor: centers_values\n",
     "    })\n",
-    "    print loss_value"
+    "    print loss_value, l2_loss_value"
    ]
   },
   {
@@ -163,15 +183,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ True False  True]\n"
-     ]
+     "ename": "TypeError",
+     "evalue": "object of type 'Tensor' has no len()",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-12ba78b32060>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0myt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconstant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconstant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconstant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'Tensor' has no len()"
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -186,6 +210,65 @@
     "result = tf.equal(yt, [10] * 3)\n",
     "with tf.Session() as sess:\n",
     "    print sess.run(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_distance(selected_x, selected_y):\n",
+    "    sum = 0.0\n",
+    "    for i in range(len(selected_x)):\n",
+    "        for j in range(len(selected_y)):\n",
+    "            sum += (selected_x[i, j] - selected_y[j]) ** 2\n",
+    "    return sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_x = tf.placeholder(tf.float32, [100, 16])\n",
+    "selected_y = tf.placeholder(tf.float32, [16])\n",
+    "selected_x2 = tf.multiply(selected_x, selected_x)\n",
+    "selected_y2 = tf.multiply(selected_y, selected_y)\n",
+    "selected_xy = tf.multiply(selected_x, selected_y)\n",
+    "distance_category = tf.abs(tf.subtract(tf.add(selected_x2, selected_y2), 2*selected_xy))\n",
+    "distance_category = tf.reduce_sum(distance_category)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "219.548\n219.548199573\n"
+     ]
+    }
+   ],
+   "source": [
+    "sess = tf.Session()\n",
+    "selected_x_value = np.random.random([100, 16])\n",
+    "selected_y_value = np.random.random([16])\n",
+    "print sess.run(distance_category, feed_dict={selected_x:selected_x_value, selected_y: selected_y_value})\n",
+    "print calculate_distance(selected_x_value, selected_y_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
    ]
   },
   {
